NetS13nSW: Skip interception if a subresource loader is attached

When ServiceWorkerServicification is on and NetworkService is off, the request
will be intercepted by both of request interceptors living in
NavigationURLLoaderImpl and URLRequestInterceptors created in
ResourceDispatcherHostImpl. However, in the current implementation, the network
request intercepted by a request intercepter could be intercepted in the
ResourceDispatcherHostImpl again when a service worker intercepted the request
skips handling the request. This CL is to avoid the double interception.

Bug: 846232
Change-Id: Iec6e770a9ba620a9592cd41872d1d8572b9e8bf4
Reviewed-on: https://chromium-review.googlesource.com/1074782
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562368}
Former-commit-id: 684a5ad2a671a91a7feb214703f8decc3fc83d10