content/browser/service_worker/service_worker_request_handler.cc
@@ -85,19 +85,15 @@ void ServiceWorkerRequestHandler::InitializeForNavigation(
     const base::Callback<WebContents*(void)>& web_contents_getter) {
   CHECK(IsBrowserSideNavigationEnabled());
 
-  // S13nServiceWorker enabled, NetworkService disabled:
-  // To start the navigation, InitializeForNavigationNetworkService() is called
-  // instead of this, but when that request handler falls back to network,
-  // InitializeForNavigation() is called.
-  // Since we already determined to fall back to network, don't create another
-  // handler.
-  if (ServiceWorkerUtils::IsServicificationEnabled())
-    return;
-
   // Only create a handler when there is a ServiceWorkerNavigationHandlerCore
   // to take ownership of a pre-created SeviceWorkerProviderHost.
   if (!navigation_handle_core)
     return;
+
+  // This is the legacy path used by non-NetworkService and
+  // non-S13nServiceWorker. The NetworkService/S13nServiceWorker path is
+  // InitializeForNavigationNetworkService().
+  DCHECK(!ServiceWorkerUtils::IsServicificationEnabled());
 
   // Create the handler even for insecure HTTP since it's used in the
   // case of redirect to HTTPS.
